Re-order selected tabs painting for hover effects.

Hovering over selected tabs will not properly order painting such that the
painting order will paint the lower tab "tails" over the left adjacent tab.

While this has always been present, with the recent added painting of the
stroke on the tabs, this is much more apparent.

Bug: 871838
Change-Id: I4dd4c4264107fb8a058b5210b02c27008498f35d
Reviewed-on: https://chromium-review.googlesource.com/1165689
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581423}
Former-commit-id: 332bdd7bc8e88b3a1a927500d1723ed24523f1fa