chrome/browser/ui/views/tabs/tab_strip.cc
@@ -1228,21 +1228,23 @@ void TabStrip::PaintChildren(const views::PaintInfo& paint_info) {
     // of hovered background tabs due to the painting order. This manifests as
     // the lower left curve the tab being visibly overwritten. This code detects
     // the hovered cases and defers painting of the given tab to below.
-    auto check_hovered_or_paint = [&paint_info, &hovered_tab,
-                                   &hovered_tabs](Tab* tab) {
-      if (MD::IsRefreshUi() && tab->mouse_hovered())
-        hovered_tab = tab;
-      else if (MD::IsRefreshUi() && tab->hover_controller()->ShouldDraw())
-        hovered_tabs.push_back(tab);
-      else
-        tab->Paint(paint_info);
-    };
+    const auto check_hovered_selected_or_paint =
+        [&paint_info, &hovered_tab, &hovered_tabs, &selected_tabs](Tab* tab) {
+          if (MD::IsRefreshUi() && tab->mouse_hovered())
+            hovered_tab = tab;
+          else if (MD::IsRefreshUi() && tab->hover_controller()->ShouldDraw())
+            hovered_tabs.push_back(tab);
+          else if (tab->IsSelected())
+            selected_tabs.push_back(tab);
+          else
+            tab->Paint(paint_info);
+        };
 
-    auto paint_closing_tabs = [=](int index) {
+    const auto paint_closing_tabs = [=](int index) {
       if (tabs_closing_map_.find(index) == tabs_closing_map_.end())
         return;
       for (Tab* tab : base::Reversed(tabs_closing_map_[index]))
-        check_hovered_or_paint(tab);
+        check_hovered_selected_or_paint(tab);
     };
 
     paint_closing_tabs(tab_count());
@@ -1261,10 +1263,8 @@ void TabStrip::PaintChildren(const views::PaintInfo& paint_info) {
       } else if (tab->IsActive()) {
         active_tab = tab;
         active_tab_index = i;
-      } else if (tab->IsSelected()) {
-        selected_tabs.push_back(tab);
       } else if (!stacked_layout_) {
-        check_hovered_or_paint(tab);
+        check_hovered_selected_or_paint(tab);
       }
       paint_closing_tabs(i);
     }
